# rt82display-weather

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
rt82weather/: __init__.py  cli.py  config.py  icons.py  render.py  theme.py
rt82weather/providers/: __init__.py  bbc.py
tests/: test_cli.py  test_config.py  test_encode.py  test_icons.py  test_providers.py  test_render.py
